--- a/src/index.html
+++ b/src/index.html
@@ -617,7 +617,12 @@
             name="email"
             placeholder="Электронная почта"
           /><br />
-          <input type="text" name="message" placeholder="Сообщение" /><br />
+          <textarea
+            type="text"
+            name="message"
+            placeholder="Сообщение"
+          ></textarea
+          ><br />
           <div class="content">
             <p>
               Нажимая “отправить”, вы даете согласие на
