--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
           <input type="text" name="username" placeholder="Имя"><br>
           <input type="tel" name="phone" placeholder="Телефон"><br>
           <input type="email" name="email" placeholder="Электронная почта"><br>
-          <input type="text" name="message" placeholder="Сообщение"><br>
+          <textarea type="text" name="message" placeholder="Сообщение"></textarea><br>
           <div class="content">
             <p>
               Нажимая “отправить”, вы даете согласие на
