--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,6 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <!-- <link rel="stylesheet" href="./scss/style.scss" /> -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
@@ -21,8 +20,7 @@
           <button
             class="button button--burger-close visually-hidden"
             type="button"
-          >
-          </button>
+          ></button>
           <div class="interactiv-logo">
             <a class="logo" href="#"
               ><img src="./img/Group.svg" alt="Логотип"
@@ -107,7 +105,7 @@
           <button type="button" class="button button--checkstatus"></button>
         </div>
       </div>
-      <nav class="scrol-menu visible-tablet">
+      <nav class="scrol-menu scrol-menu--visible-tablet">
         <a class="scrol-menu__item" href="#">Ремонтируемые бренды</a>
         <a class="scrol-menu__item" href="#">Ремонтируемые устройства</a>
         <a class="scrol-menu__item" href="#">Цена на услуги</a>
@@ -134,7 +132,7 @@
             maxime praesentium quidem?
           </p>
           <button type="button" class="button-reed-more">
-            <div class="icon-btn"></div>
+            <img class="icon-btn" />
             <span class="text-btn-reed-more"><b>Читать далее</b></span>
           </button>
         </div>
@@ -143,7 +141,7 @@
         </div>
       </div>
       <div class="equip-list brand-list">
-        <h2 class="title">РЕМОНТ ТЕХНИКИ РАЗЛИЧНЫХ БРЕНДОВ</h2>
+        <h2 class="title-h2">РЕМОНТ ТЕХНИКИ РАЗЛИЧНЫХ БРЕНДОВ</h2>
 
         <div class="swiper-block-mobile">
           <div class="swiper-container">
@@ -247,13 +245,13 @@
           </div>
 
           <button type="button" class="button-show-more">
-            <div class="icon-btn"></div>
+            <img class="icon-btn" />
             <span class="text-btn">Показать всё</span>
           </button>
         </div>
       </div>
       <div class="equip-list tech-list">
-        <h2 class="title">РЕМОНТ РАЗЛИЧНЫХ ВИДОВ ТЕХНИКИ</h2>
+        <h2 class="title-h2">РЕМОНТ РАЗЛИЧНЫХ ВИДОВ ТЕХНИКИ</h2>
 
         <div class="swiper-block-mobile">
           <div class="swiper-container">
@@ -319,13 +317,13 @@
           </div>
 
           <button type="button" class="button-show-more">
-            <div class="icon-btn"></div>
+            <img class="icon-btn" />
             <span class="text-btn">Показать всё</span>
           </button>
         </div>
       </div>
       <div class="price-list">
-        <h2 class="title">ЦЕНЫ НА УСЛУГИ</h2>
+        <h2 class="title-h2">ЦЕНЫ НА УСЛУГИ</h2>
 
         <div class="description-price-container">
           <div class="description-price--block-nonmobile">
@@ -345,12 +343,7 @@
                 30-120 мин
                 <button class="submit" type="submit">
                   <span>ЗАКАЗАТЬ</span>
-                  <img
-                    src="./img/goside.svg"
-                    alt=""
-                    width="24px"
-                    height="28px"
-                  />
+                  <img src="./img/goside.svg" alt="" width="24" height="28" />
                 </button>
               </div>
             </div>
@@ -373,12 +366,7 @@
                 30-120 мин
                 <button class="submit" type="submit">
                   <span>ЗАКАЗАТЬ</span>
-                  <img
-                    src="./img/goside.svg"
-                    alt=""
-                    width="24px"
-                    height="28px"
-                  />
+                  <img src="./img/goside.svg" alt="" width="24" height="28" />
                 </button>
               </div>
             </div>
@@ -401,12 +389,7 @@
                 30-120 мин
                 <button class="submit" type="submit">
                   <span>ЗАКАЗАТЬ</span>
-                  <img
-                    src="./img/goside.svg"
-                    alt=""
-                    width="24px"
-                    height="28px"
-                  />
+                  <img src="./img/goside.svg" alt="" width="24" height="28" />
                 </button>
               </div>
             </div>
@@ -431,12 +414,7 @@
                 30-120 мин
                 <button class="submit" type="submit">
                   <span>ЗАКАЗАТЬ</span>
-                  <img
-                    src="./img/goside.svg"
-                    alt=""
-                    width="24px"
-                    height="28px"
-                  />
+                  <img src="./img/goside.svg" alt="" width="24" height="28" />
                 </button>
               </div>
             </div>
@@ -467,8 +445,8 @@
                         <img
                           src="./img/goside.svg"
                           alt=""
-                          width="24px"
-                          height="28px"
+                          width="24"
+                          height="28"
                         />
                       </button>
                     </div>
@@ -496,8 +474,8 @@
                         <img
                           src="./img/goside.svg"
                           alt=""
-                          width="24px"
-                          height="28px"
+                          width="24"
+                          height="28"
                         />
                       </button>
                     </div>
@@ -525,8 +503,8 @@
                         <img
                           src="./img/goside.svg"
                           alt=""
-                          width="24px"
-                          height="28px"
+                          width="24"
+                          height="28"
                         />
                       </button>
                     </div>
@@ -556,8 +534,8 @@
                         <img
                           src="./img/goside.svg"
                           alt=""
-                          width="24px"
-                          height="28px"
+                          width="24"
+                          height="28"
                         />
                       </button>
                     </div>
@@ -603,6 +581,7 @@
     </main>
 
     <div class="feedback visually-hidden">
+      <div class="transparent"></div>
       <div class="feedback__wrapper">
         <form action="#" method="POST">
           <button
@@ -617,12 +596,7 @@
             name="email"
             placeholder="Электронная почта"
           /><br />
-          <textarea
-            type="text"
-            name="message"
-            placeholder="Сообщение"
-          ></textarea
-          ><br />
+          <textarea name="message" placeholder="Сообщение"></textarea><br />
           <div class="content">
             <p>
               Нажимая “отправить”, вы даете согласие на
@@ -637,13 +611,14 @@
           </div>
           <button class="submit" type="submit">
             <span>ОТПРАВИТЬ</span>
-            <img src="./img/goside.svg" alt="" width="24px" height="28px" />
+            <img src="./img/goside.svg" alt="" width="24" height="28" />
           </button>
         </form>
       </div>
     </div>
 
     <div class="callback visually-hidden">
+      <div class="transparent"></div>
       <div class="callback__wrapper">
         <form action="#" method="POST">
           <button
@@ -666,7 +641,7 @@
           </div>
           <button class="submit" type="submit">
             <span>ОТПРАВИТЬ</span>
-            <img src="./img/goside.svg" alt="" width="24px" height="28px" />
+            <img src="./img/goside.svg" alt="" width="24" height="28" />
           </button>
         </form>
       </div>
