--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <title>services</title>
   <link href="style.css" rel="stylesheet"></head>
@@ -12,8 +11,7 @@
     <div class="menu-wrapper visible-laptop">
       <div class="menu">
         <div class="header-menu">
-          <button class="button button--burger-close visually-hidden" type="button">
-          </button>
+          <button class="button button--burger-close visually-hidden" type="button"></button>
           <div class="interactiv-logo">
             <a class="logo" href="#"><img src="./img/Group.svg" alt="Логотип"></a>
           </div>
@@ -94,7 +92,7 @@
           <button type="button" class="button button--checkstatus"></button>
         </div>
       </div>
-      <nav class="scrol-menu visible-tablet">
+      <nav class="scrol-menu scrol-menu--visible-tablet">
         <a class="scrol-menu__item" href="#">Ремонтируемые бренды</a>
         <a class="scrol-menu__item" href="#">Ремонтируемые устройства</a>
         <a class="scrol-menu__item" href="#">Цена на услуги</a>
@@ -121,7 +119,7 @@
             maxime praesentium quidem?
           </p>
           <button type="button" class="button-reed-more">
-            <div class="icon-btn"></div>
+            <img class="icon-btn">
             <span class="text-btn-reed-more"><b>Читать далее</b></span>
           </button>
         </div>
@@ -130,7 +128,7 @@
         </div>
       </div>
       <div class="equip-list brand-list">
-        <h2 class="title">РЕМОНТ ТЕХНИКИ РАЗЛИЧНЫХ БРЕНДОВ</h2>
+        <h2 class="title-h2">РЕМОНТ ТЕХНИКИ РАЗЛИЧНЫХ БРЕНДОВ</h2>
 
         <div class="swiper-block-mobile">
           <div class="swiper-container">
@@ -234,13 +232,13 @@
           </div>
 
           <button type="button" class="button-show-more">
-            <div class="icon-btn"></div>
+            <img class="icon-btn">
             <span class="text-btn">Показать всё</span>
           </button>
         </div>
       </div>
       <div class="equip-list tech-list">
-        <h2 class="title">РЕМОНТ РАЗЛИЧНЫХ ВИДОВ ТЕХНИКИ</h2>
+        <h2 class="title-h2">РЕМОНТ РАЗЛИЧНЫХ ВИДОВ ТЕХНИКИ</h2>
 
         <div class="swiper-block-mobile">
           <div class="swiper-container">
@@ -306,13 +304,13 @@
           </div>
 
           <button type="button" class="button-show-more">
-            <div class="icon-btn"></div>
+            <img class="icon-btn">
             <span class="text-btn">Показать всё</span>
           </button>
         </div>
       </div>
       <div class="price-list">
-        <h2 class="title">ЦЕНЫ НА УСЛУГИ</h2>
+        <h2 class="title-h2">ЦЕНЫ НА УСЛУГИ</h2>
 
         <div class="description-price-container">
           <div class="description-price--block-nonmobile">
@@ -332,7 +330,7 @@
                 30-120 мин
                 <button class="submit" type="submit">
                   <span>ЗАКАЗАТЬ</span>
-                  <img src="./img/goside.svg" alt="" width="24px" height="28px">
+                  <img src="./img/goside.svg" alt="" width="24" height="28">
                 </button>
               </div>
             </div>
@@ -355,7 +353,7 @@
                 30-120 мин
                 <button class="submit" type="submit">
                   <span>ЗАКАЗАТЬ</span>
-                  <img src="./img/goside.svg" alt="" width="24px" height="28px">
+                  <img src="./img/goside.svg" alt="" width="24" height="28">
                 </button>
               </div>
             </div>
@@ -378,7 +376,7 @@
                 30-120 мин
                 <button class="submit" type="submit">
                   <span>ЗАКАЗАТЬ</span>
-                  <img src="./img/goside.svg" alt="" width="24px" height="28px">
+                  <img src="./img/goside.svg" alt="" width="24" height="28">
                 </button>
               </div>
             </div>
@@ -403,7 +401,7 @@
                 30-120 мин
                 <button class="submit" type="submit">
                   <span>ЗАКАЗАТЬ</span>
-                  <img src="./img/goside.svg" alt="" width="24px" height="28px">
+                  <img src="./img/goside.svg" alt="" width="24" height="28">
                 </button>
               </div>
             </div>
@@ -431,7 +429,7 @@
                       30-120 мин
                       <button class="submit" type="submit">
                         <span>ЗАКАЗАТЬ</span>
-                        <img src="./img/goside.svg" alt="" width="24px" height="28px">
+                        <img src="./img/goside.svg" alt="" width="24" height="28">
                       </button>
                     </div>
                   </div>
@@ -455,7 +453,7 @@
                       30-120 мин
                       <button class="submit" type="submit">
                         <span>ЗАКАЗАТЬ</span>
-                        <img src="./img/goside.svg" alt="" width="24px" height="28px">
+                        <img src="./img/goside.svg" alt="" width="24" height="28">
                       </button>
                     </div>
                   </div>
@@ -479,7 +477,7 @@
                       30-120 мин
                       <button class="submit" type="submit">
                         <span>ЗАКАЗАТЬ</span>
-                        <img src="./img/goside.svg" alt="" width="24px" height="28px">
+                        <img src="./img/goside.svg" alt="" width="24" height="28">
                       </button>
                     </div>
                   </div>
@@ -505,7 +503,7 @@
                       30-120 мин
                       <button class="submit" type="submit">
                         <span>ЗАКАЗАТЬ</span>
-                        <img src="./img/goside.svg" alt="" width="24px" height="28px">
+                        <img src="./img/goside.svg" alt="" width="24" height="28">
                       </button>
                     </div>
                   </div>
@@ -546,6 +544,7 @@
     </main>
 
     <div class="feedback visually-hidden">
+      <div class="transparent"></div>
       <div class="feedback__wrapper">
         <form action="#" method="POST">
           <button class="button button--burger-close-feedback" type="button"></button>
@@ -553,7 +552,7 @@
           <input type="text" name="username" placeholder="Имя"><br>
           <input type="tel" name="phone" placeholder="Телефон"><br>
           <input type="email" name="email" placeholder="Электронная почта"><br>
-          <textarea type="text" name="message" placeholder="Сообщение"></textarea><br>
+          <textarea name="message" placeholder="Сообщение"></textarea><br>
           <div class="content">
             <p>
               Нажимая “отправить”, вы даете согласие на
@@ -564,13 +563,14 @@
           </div>
           <button class="submit" type="submit">
             <span>ОТПРАВИТЬ</span>
-            <img src="./img/goside.svg" alt="" width="24px" height="28px">
+            <img src="./img/goside.svg" alt="" width="24" height="28">
           </button>
         </form>
       </div>
     </div>
 
     <div class="callback visually-hidden">
+      <div class="transparent"></div>
       <div class="callback__wrapper">
         <form action="#" method="POST">
           <button class="button button--burger-close-callback" type="button"></button>
@@ -586,7 +586,7 @@
           </div>
           <button class="submit" type="submit">
             <span>ОТПРАВИТЬ</span>
-            <img src="./img/goside.svg" alt="" width="24px" height="28px">
+            <img src="./img/goside.svg" alt="" width="24" height="28">
           </button>
         </form>
       </div>
