--- a/src/index.html
+++ b/src/index.html
@@ -132,7 +132,7 @@
             maxime praesentium quidem?
           </p>
           <button type="button" class="button-reed-more">
-            <img class="icon-btn" />
+            <img src="../src/img/reedmore.svg" class="icon-btn" alt="" />
             <span class="text-btn-reed-more"><b>Читать далее</b></span>
           </button>
         </div>
@@ -245,7 +245,7 @@
           </div>
 
           <button type="button" class="button-show-more">
-            <img class="icon-btn" />
+            <img src="../src/img/reedmore.svg" class="icon-btn" alt="" />
             <span class="text-btn">Показать всё</span>
           </button>
         </div>
@@ -317,7 +317,7 @@
           </div>
 
           <button type="button" class="button-show-more">
-            <img class="icon-btn" />
+            <img src="../src/img/reedmore.svg" class="icon-btn" alt="" />
             <span class="text-btn">Показать всё</span>
           </button>
         </div>
