--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             maxime praesentium quidem?
           </p>
           <button type="button" class="button-reed-more">
-            <img class="icon-btn">
+            <img src="../src/img/reedmore.svg" class="icon-btn" alt="">
             <span class="text-btn-reed-more"><b>Читать далее</b></span>
           </button>
         </div>
@@ -232,7 +232,7 @@
           </div>
 
           <button type="button" class="button-show-more">
-            <img class="icon-btn">
+            <img src="../src/img/reedmore.svg" class="icon-btn" alt="">
             <span class="text-btn">Показать всё</span>
           </button>
         </div>
@@ -304,7 +304,7 @@
           </div>
 
           <button type="button" class="button-show-more">
-            <img class="icon-btn">
+            <img src="../src/img/reedmore.svg" class="icon-btn" alt="">
             <span class="text-btn">Показать всё</span>
           </button>
         </div>
