--- a/src/index.html
+++ b/src/index.html
@@ -26,8 +26,7 @@
               ><img src="./img/Group.svg" alt="Логотип"
             /></a>
           </div>
-          <button type="button" class="button button--search" type="button">
-          </button>
+          <button class="button button--search" type="button"> </button>
         </div>
         <nav class="items-menu">
           <ul class="items-menu__list">
@@ -557,7 +556,7 @@
           </p>
           <button class="button-offer">
             <span><b>Получить коммерческое предложение</b></span>
-            <img src="./img/more.svg" alt="" width="24px" height="28px" />
+            <img src="./img/more.svg" alt="" width="24" height="28" />
           </button>
         </div>
       </div>
