--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
           <div class="interactiv-logo">
             <a class="logo" href="#"><img src="./img/Group.svg" alt="Логотип"></a>
           </div>
-          <button type="button" class="button button--search" type="button">
-          </button>
+          <button class="button button--search" type="button"> </button>
         </div>
         <nav class="items-menu">
           <ul class="items-menu__list">
@@ -524,7 +523,7 @@
           </p>
           <button class="button-offer">
             <span><b>Получить коммерческое предложение</b></span>
-            <img src="./img/more.svg" alt="" width="24px" height="28px">
+            <img src="./img/more.svg" alt="" width="24" height="28">
           </button>
         </div>
       </div>
