--- a/src/index.html
+++ b/src/index.html
@@ -131,7 +131,7 @@
             maxime praesentium quidem?
           </p>
           <button type="button" class="button-reed-more">
-            <img src="../src/img/reedmore.svg" class="icon-btn" alt="" />
+            <img src="./img/reedmore.svg" class="icon-btn" alt="" />
             <span class="text-btn-reed-more"><b>Читать далее</b></span>
           </button>
         </div>
@@ -244,7 +244,7 @@
           </div>
 
           <button type="button" class="button-show-more">
-            <img src="../src/img/reedmore.svg" class="icon-btn" alt="" />
+            <img src="./img/reedmore.svg" class="icon-btn" alt="" />
             <span class="text-btn">Показать всё</span>
           </button>
         </div>
@@ -316,7 +316,7 @@
           </div>
 
           <button type="button" class="button-show-more">
-            <img src="../src/img/reedmore.svg" class="icon-btn" alt="" />
+            <img src="./img/reedmore.svg" class="icon-btn" alt="" />
             <span class="text-btn">Показать всё</span>
           </button>
         </div>
