--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             maxime praesentium quidem?
           </p>
           <button type="button" class="button-reed-more">
-            <img src="../src/img/reedmore.svg" class="icon-btn" alt="">
+            <img src="./img/reedmore.svg" class="icon-btn" alt="">
             <span class="text-btn-reed-more"><b>Читать далее</b></span>
           </button>
         </div>
@@ -231,7 +231,7 @@
           </div>
 
           <button type="button" class="button-show-more">
-            <img src="../src/img/reedmore.svg" class="icon-btn" alt="">
+            <img src="./img/reedmore.svg" class="icon-btn" alt="">
             <span class="text-btn">Показать всё</span>
           </button>
         </div>
@@ -303,7 +303,7 @@
           </div>
 
           <button type="button" class="button-show-more">
-            <img src="../src/img/reedmore.svg" class="icon-btn" alt="">
+            <img src="./img/reedmore.svg" class="icon-btn" alt="">
             <span class="text-btn">Показать всё</span>
           </button>
         </div>
