--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
           </ul>
         </div>
       </div>
-      <div class="transparent"></div>
+      <div class="transparent transparent--none"></div>
     </div>
     <main>
       <div class="interactiv-group hidden-laptop">
