--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </ul>
         </div>
       </div>
-      <div class="transparent"></div>
+      <div class="transparent transparent--none"></div>
     </div>
     <main>
       <div class="interactiv-group hidden-laptop">
